# Dormitory_Project_Backend

./: .gitignore  README.md  Todo.md  app.py  config.example.toml  gunicorn.conf.py  main.py  pyproject.toml  scheduler.py
alembic/: env.py
alembic/versions/: 191b12ff6a94_add_deleted_column_to_bill.py
bill/: db.py  route.py  util.py  validate.py
common/: auth.py  constants.py  db.py  exceptions.py  route.py  util.py
elec/: db.py  route.py
profile/: db.py  route.py
script/: create_db.py  create_db_fetch_elec.py  fetch_elec.py  sync_data.py
