[project]
name = "main"
version = "0.1.0"
description = "Main Controller for Dormitory Project Backend"
readme = "README.md"
authors = [
    { name = "ZeroCore", email = "esetting@hotmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "apscheduler>=3.11.0",
    "buptmw>=0.1.3",
    "flask>=3.1.2",
    "flask-sqlalchemy>=3.1.1",
    "logto>=0.2.1",
    "psycopg2-binary>=2.9.10",
    "pyjwt>=2.10.1",
    "python-jose>=3.5.0",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "gunicorn>=23.0.0",
]
